--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-black-and-light-theme"]
 	path = themes/hugo-black-and-light-theme
 	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme
+[submodule "academia/hugo-black-and-light-theme"]
+	path = academia/hugo-black-and-light-theme
+	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme
