--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "academia/hugo-black-and-light-theme"]
 	path = academia/hugo-black-and-light-theme
 	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme
+[submodule "academia/themes/hugo-black-and-light-theme"]
+	path = academia/themes/hugo-black-and-light-theme
+	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme
