--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "academia/manis-hugo-theme"]
 	path = academia/manis-hugo-theme
 	url = https://github.com/yursan9/manis-hugo-theme
+[submodule "academia/themes/manis-hugo-theme"]
+	path = academia/themes/manis-hugo-theme
+	url = https://github.com/yursan9/manis-hugo-theme
