--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://cludec.github.io/academic/"
+baseURL = "https://clement.gitlab.io/Cludec_academia//"
 defaultContentLanguage = "fr"
 hasCJKLanguage = true
 languageCode = "fr"
